# ms-file-reader

./: .gitignore  README.md  pyproject.toml
ms_file_processing/: __init__.py  common_ms.py
src/ms_file_reader/: __init__.py  common_ms.py  jcamp.py  massbank.py  msp.py
tests/: test_common.py  test_jcamp.py  test_library.py  test_massbank.py  test_msp.py
tests/test_files/jcamp/: test1.jdx
tests/test_files/msp/: test1.msp
